--- a/index.html
+++ b/index.html
@@ -207,10 +207,32 @@
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front card__side--front-1">
-                Front
+                <div class="card__picture card__picture--1">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">
+                    The Sea Explorer
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>3 day tour</li>
+                    <li>Upto 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy hotels</li>
+                    <li>Difficuly: easy</li>
+                  </ul>
+                </div>
               </div>
+
               <div class="card__side card__side--back card__side--back-1">
-                Back
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <span class="card__price-only">Only</span>
+                    <span class="card__price-value">$297</span>
+                  </div>
+
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
               </div>
             </div>
           </div>
@@ -218,10 +240,31 @@
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front card__side--front-2">
-                Front
+                <div class="card__picture card__picture--2">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--2">
+                    The Forest Hiker
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>7 day tour</li>
+                    <li>Upto 40 people</li>
+                    <li>6 tour guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficuly: medium</li>
+                  </ul>
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-2">
-                Back
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <span class="card__price-only">Only</span>
+                    <span class="card__price-value">$297</span>
+                  </div>
+
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
               </div>
             </div>
           </div>
@@ -229,13 +272,38 @@
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front card__side--front-3">
-                Front
+                <div class="card__picture card__picture--3">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--3">
+                    The Snow Adventurer
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>5 day tour</li>
+                    <li>Upto 15 people</li>
+                    <li>3 tour guides</li>
+                    <li>Sleeping cozy hotels</li>
+                    <li>Difficuly: hard</li>
+                  </ul>
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-3">
-                Back
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <span class="card__price-only">Only</span>
+                    <span class="card__price-value">$297</span>
+                  </div>
+
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
     </main>
