Fix the spacing

--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
   <body>
     <header class="header">
       <div class="header__logo-box">
-        <img
-          src="./img/logo-white.png"
-          alt="Outdoor Logo"
-          class="header__logo"
-        />
+        <img src="./img/logo-white.png" alt="Outdoor Logo" class="header__logo" />
       </div>
 
       <div class="header__text-box">
@@ -91,18 +87,17 @@
               You're going to fall in love with nature
             </h3>
             <p class="paragraph">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-              temporibus, laboriosam cum rerum odit similique, velit, recusandae
-              sint necessitatibus sit architecto officiis qui nesciunt esse
-              facere accusamus quam eius numquam.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda temporibus,
+              laboriosam cum rerum odit similique, velit, recusandae sint necessitatibus sit
+              architecto officiis qui nesciunt esse facere accusamus quam eius numquam.
             </p>
 
             <h3 class="heading-tertiary u-margin-bottom-small">
               Live adventurous like you never have before
             </h3>
             <p class="paragraph">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-              temporibus, laboriosam cum rerum odit similique, velit, recusandae
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda temporibus,
+              laboriosam cum rerum odit similique, velit, recusandae
             </p>
 
             <a href="#" class="btn-text">
@@ -143,8 +138,8 @@
               </h3>
 
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda temporibus, laboriosam cum rerum odit.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda temporibus,
+                laboriosam cum rerum odit.
               </p>
             </div>
           </div>
@@ -158,8 +153,8 @@
               </h3>
 
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda temporibus, laboriosam cum rerum odit.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda temporibus,
+                laboriosam cum rerum odit.
               </p>
             </div>
           </div>
@@ -173,8 +168,8 @@
               </h3>
 
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda temporibus, laboriosam cum rerum odit.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda temporibus,
+                laboriosam cum rerum odit.
               </p>
             </div>
           </div>
@@ -188,8 +183,8 @@
               </h3>
 
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda temporibus, laboriosam cum rerum odit.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda temporibus,
+                laboriosam cum rerum odit.
               </p>
             </div>
           </div>
